[gd_scene load_steps=23 format=3 uid="uid://c21u3b11dd227"]

[ext_resource type="Script" path="res://Scenes/ui/start_menu.gd" id="1_hq4rm"]
[ext_resource type="FontFile" uid="uid://ejil0kwiqa3l" path="res://Assets/UI/m5x7.ttf" id="2_3ryvb"]
[ext_resource type="Texture2D" uid="uid://chkj1dv5ybbs5" path="res://Assets/UI/Game Logo.png" id="2_8l2ck"]
[ext_resource type="Gradient" uid="uid://b8n6tjn4cqyto" path="res://Assets/UI/background gradient.tres" id="2_lddre"]
[ext_resource type="Texture2D" uid="uid://t6wd82y1obf0" path="res://Assets/UI/Pause_menu_wrap.png" id="5_51jo0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hbtyn"]
gradient = ExtResource("2_lddre")
width = 128
height = 128
fill_from = Vector2(0.4, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7v7eo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sy8oj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oc2hi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqvku"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4yo6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_35pod"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tl6tr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxvol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5vmsn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5cis1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjx17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ox4qv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5v08u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t675q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4iu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ycybs"]

[node name="Start_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_hq4rm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_hbtyn")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("2_8l2ck")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.435294, 0.741176, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0.639216, 0.639216, 0.639216, 1)
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_7v7eo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sy8oj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oc2hi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wqvku")
text = "Start"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.435294, 0.741176, 0.439216, 1)
theme_override_colors/font_hover_color = Color(0.639216, 0.639216, 0.639216, 1)
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_7v7eo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sy8oj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oc2hi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wqvku")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.643137, 0.203922, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.639216, 0.639216, 0.639216, 1)
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_k4yo6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_35pod")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tl6tr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lxvol")
text = "Quit"

[node name="u_sure?" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -53.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_51jo0")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="u_sure?"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 4.0
offset_right = 50.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 16
text = "Are you sure you want to quit?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="u_sure?"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -43.0
offset_right = 25.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0

[node name="Yes" type="Button" parent="u_sure?/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_5vmsn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5cis1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jjx17")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ox4qv")
text = "Yes"

[node name="No" type="Button" parent="u_sure?/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_fonts/font = ExtResource("2_3ryvb")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_5v08u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t675q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_a4iu1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ycybs")
text = "No"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="u_sure?/VBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="u_sure?/VBoxContainer/No" to="." method="_on_no_pressed"]
